--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,73 @@
 
 */
 /************************************************/
+
+/* Basic reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Additional resets for a more comprehensive reset */
+html {
+  font-family: sans-serif;
+  line-height: 1.6;
+}
+
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+button,
+input,
+select,
+textarea {
+  font: inherit;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* END * Basic reset */
+
+body {
+  font-family: "Outfit", sans-serif; /* Default*/
+  font-size: 1em; /* Default for paragraphs*/
+  background-color: #f3e6d8;
+}
+
+/* Main wrapper of recipe card */
+main {
+  background-color: #ffffff;
+  width: 736px;
+  border-radius: 24px;
+  margin: 0 auto;
+}
+
+.recipe-image {
+  width: 656px;
+  height: 300px;
+  border-radius: 12px;
+}
