--- a/styles/style.css
+++ b/styles/style.css
@@ -75,18 +75,71 @@ body {
   font-family: "Outfit", sans-serif; /* Default*/
   font-size: 1em; /* Default for paragraphs*/
   background-color: #f3e6d8;
+  padding: 7.6em;
+  margin: 0 auto;
 }
 
 /* Main wrapper of recipe card */
 main {
   background-color: #ffffff;
-  width: 736px;
+  width: 46em;
   border-radius: 24px;
   margin: 0 auto;
+  padding: 2.5em;
+  color: hsl(30, 10%, 34%);
 }
 
 .recipe-image {
+  padding-bottom: 2.5em;
+}
+
+img {
   width: 656px;
   height: 300px;
   border-radius: 12px;
+}
+
+.recipe-intro__title {
+  font-family: "Young Serif", serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-bottom: 0.5em;
+  color: hsl(24, 5%, 18%);
+}
+
+.recipe-description {
+  margin-bottom: 2em;
+}
+
+.recipe__prep-time {
+  background-color: #f3e6d8;
+  padding: 2em;
+  border-radius: 12px;
+}
+
+::marker {
+  color: #7b284f;
+}
+
+.recipe__prep-time-title {
+  color: #7b284f;
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-bottom: 0.5em;
+}
+
+.recipe__prep-list {
+  list-style-type: disc;
+  margin-left: 1em;
+  line-height: 2em;
+}
+
+.ingredients {
+  margin-top: 2em;
+}
+
+.recipe__ingredients-title {
+  color: #854632;
+  font-family: "Young Serif", serif;
+  font-size: 1.7rem;
 }
