--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ a {
 
 body {
   font-family: "Outfit", sans-serif; /* Default*/
-  font-size: 1em; /* Default for paragraphs*/
+  font-size: 1rem; /* Default for paragraphs*/
   background-color: #f3e6d8;
   padding: 7.6em;
   margin: 0 auto;
@@ -82,16 +82,16 @@ body {
 /* Main wrapper of recipe card */
 main {
   background-color: #ffffff;
-  width: 46em;
+  width: 44em;
   border-radius: 24px;
   margin: 0 auto;
-  padding: 2em;
+  padding: 1.7em;
   color: hsl(30, 10%, 34%);
 }
 
 .recipe-image {
   margin: 0;
-  padding-bottom: 2.5em;
+  padding-bottom: 2em;
 }
 
 img {
@@ -108,7 +108,7 @@ img {
   color: hsl(24, 5%, 18%);
 }
 
-.recipe-description {
+.recipe-desc {
   margin-bottom: 2em;
 }
 
@@ -144,7 +144,7 @@ img {
 .recipe__ingredients-title {
   color: #854632;
   font-family: "Young Serif", serif;
-  font-size: 1.7rem;
+  font-size: 1.75rem;
 }
 
 .recipe__ingredients-list {
@@ -158,13 +158,14 @@ img {
 
 .recipe-instructions {
   border-bottom: 1px solid hsl(30, 18%, 87%);
-  padding-bottom: 2em;
+  padding: 0.3em 0 1.5em 0;
+  width: 96%;
 }
 
 .recipe__instructions-title {
   color: #854632;
   font-family: "Young Serif", serif;
-  font-size: 1.7rem;
+  font-size: 1.75rem;
 }
 
 .recipe__instructions-list {
@@ -174,8 +175,34 @@ img {
 .recipe__instructions-item {
   line-height: 1.5em;
   margin: 0.5em 1em;
+  /* font-weight: 600; */
+  padding-left: 1em;
 }
 
-.recipe__instructions-item li {
+.recipe-nutrition {
+  margin: 1.5em 0;
+}
+
+.recipe__nutrition-title {
+  font-size: 1.75rem;
+  font-family: "Young Serif", serif;
+  color: #854632;
+  padding-bottom: 0.7em;
+}
+
+.recipe__nutrition-table-info {
+  padding-bottom: 0.7em;
+}
+
+.recipe__nutrition-table {
+  padding-left: 1em;
+  text-align: left;
+}
+
+.recipe__nutrition-table td {
+  color: #854632;
   font-weight: 600;
+  padding-left: 15em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid hsl(30, 18%, 87%);
 }
